--- a/tests/integration_tests/config/derive_psf_parameters_run.yml
+++ b/tests/integration_tests/config/derive_psf_parameters_run.yml
@@ -1,5 +1,5 @@
 CTA_SIMPIPE:
-  APPLICATION: simtools-tune-psf
+  APPLICATION: simtools-derive-psf-parameters
   TEST_NAME: run
   CONFIGURATION:
     SITE: North
@@ -10,4 +10,4 @@ CTA_SIMPIPE:
     TEST: true
     OUTPUT_PATH: simtools-tests
   INTEGRATION_TESTS:
-    - OUTPUT_FILE: ray-tracing/results/ray-tracing-North-LSTN-01-d10.0km-za20.0deg_tune_psf.ecsv
+    - OUTPUT_FILE: ray-tracing/results/ray-tracing-North-LSTN-01-d10.0km-za20.0deg_derive_psf_parameters.ecsv
