--- a/pyproject.toml
+++ b/pyproject.toml
@@ -74,6 +74,7 @@ scripts.simtools-db-get-array-layouts-from-db = "simtools.applications.db_get_ar
 scripts.simtools-db-get-file-from-db = "simtools.applications.db_get_file_from_db:main"
 scripts.simtools-db-get-parameter-from-db = "simtools.applications.db_get_parameter_from_db:main"
 scripts.simtools-derive-mirror-rnda = "simtools.applications.derive_mirror_rnda:main"
+scripts.simtools-derive-psf-parameters = "simtools.applications.derive_psf_parameters:main"
 scripts.simtools-generate-array-config = "simtools.applications.generate_array_config:main"
 scripts.simtools-generate-corsika-histograms = "simtools.applications.generate_corsika_histograms:main"
 scripts.simtools-generate-default-metadata = "simtools.applications.generate_default_metadata:main"
@@ -86,7 +87,6 @@ scripts.simtools-simulate-light-emission = "simtools.applications.simulate_light
 scripts.simtools-simulate-prod = "simtools.applications.simulate_prod:main"
 scripts.simtools-simulate-showers-for-trigger-rates = "simtools.applications.simulate_showers_for_trigger_rates:main"
 scripts.simtools-submit-data-from-external = "simtools.applications.submit_data_from_external:main"
-scripts.simtools-tune-psf = "simtools.applications.tune_psf:main"
 scripts.simtools-validate-camera-efficiency = "simtools.applications.validate_camera_efficiency:main"
 scripts.simtools-validate-camera-fov = "simtools.applications.validate_camera_fov:main"
 scripts.simtools-validate-cumulative-psf = "simtools.applications.validate_cumulative_psf:main"
