--- a/tests/integration_tests/config/simulate_prod_gamma_20_deg_pack_for_grid_south.yml
+++ b/tests/integration_tests/config/simulate_prod_gamma_20_deg_pack_for_grid_south.yml
@@ -1,16 +1,21 @@
 CTA_SIMPIPE:
   APPLICATION: simtools-simulate-prod
-  TEST_NAME: gamma_20_deg_pack_for_grid_south
+  TEST_NAME: gamma_20_deg_pack_for_south_grid
   CONFIGURATION:
-    PRODUCTION_CONFIG: ./tests/resources/prod_multi_config_test_South.yml
+    SIMULATION_SOFTWARE: corsika_simtel
     MODEL_VERSION: prod6
     SITE: South
+    ARRAY_LAYOUT_NAME: test_layout
     PRIMARY: gamma
     AZIMUTH_ANGLE: North
     ZENITH_ANGLE: 20
     START_RUN: 0
     RUN: 2
     NSHOW: 5
+    ESLOPE: -2.
+    VIEWCONE: "0 deg 0 deg"
+    ERANGE: "3 GeV 330 TeV"
+    CSCAT: "10 1400 m"
     DATA_DIRECTORY: simtools-output
     OUTPUT_PATH: simtools-output
     PACK_FOR_GRID_REGISTER: true
