improved tests and simplification

--- a/data/parameters/corsika_parameters.yml
+++ b/data/parameters/corsika_parameters.yml
@@ -43,8 +43,6 @@ DEBUGGING_OUTPUT_PARAMETERS:
   DIRECT: ['/dev/null']
 
 IACT_TUNING_PARAMETERS:
-  IACT: [
-    ['SPLIT_AUTO', '15M'],
-    ['IO_BUFFER', '800MB'],
-    ['MAX_BUNCHES', '1000000']
-  ]
+  SPLIT_AUTO: ['15M']
+  IO_BUFFER: ['800MB']
+  MAX_BUNCHES: ['1000000']
