--- a/pyproject.toml
+++ b/pyproject.toml
@@ -251,3 +251,9 @@ addopts = "-v --cov=simtools --cov-report=xml --cov-report=term"
 testpaths = "tests/unit_tests/"
 # Ignore the warning about fontTools.misc.py23
 filterwarnings = "ignore:The py23 module has been deprecated:DeprecationWarning"
+
+[tool.coverage.run]
+relative_files = true
+source = [
+  "simtools",
+]
