--- a/tests/integration_tests/config/simulate_prod_gamma_20_deg_North.yml
+++ b/tests/integration_tests/config/simulate_prod_gamma_20_deg_North.yml
@@ -7,10 +7,10 @@ CTA_SIMPIPE:
     SITE: North
     ARRAY_LAYOUT_NAME: test_layout
     PRIMARY: gamma
+    RUN_NUMBER_START: 10
+    NUMBER_OF_RUNS: 2
     AZIMUTH_ANGLE: North
     ZENITH_ANGLE: 20
-    START_RUN: 0
-    RUN: 2
     NSHOW: 5
     ESLOPE: -2.
     VIEWCONE: "0 deg 0 deg"
