--- a/pyproject.toml
+++ b/pyproject.toml
@@ -130,6 +130,7 @@ lint.extend-select = [
   "N",   # pep8 naming
   "NPY", # numpy
   "PT",  # pytest
+  "RET", # return statements
   "UP",  # pyupgrade
 ]
 lint.ignore = [
