--- a/tests/integration_tests/config/simulate_prod_gamma_20_deg_North_corsika.yml
+++ b/tests/integration_tests/config/simulate_prod_gamma_20_deg_North_corsika.yml
@@ -19,6 +19,7 @@ CTA_SIMPIPE:
     CORE_SCATTER: "10 1400 m"
     DATA_DIRECTORY: simtools-output
     OUTPUT_PATH: simtools-output
+    LOG_LEVEL: DEBUG
   INTEGRATION_TESTS:
     - OUTPUT_FILE: |
         test-production/corsika-data/North/gamma/data/run000002/corsika_run000002_gamma_za020deg_azm000deg_North_test_layout_test-production.zst
