--- a/tests/integration_tests/config/simulate_prod_gamma_20_deg_pack_for_grid_South.yml
+++ b/tests/integration_tests/config/simulate_prod_gamma_20_deg_pack_for_grid_South.yml
@@ -3,18 +3,19 @@ CTA_SIMPIPE:
   TEST_NAME: gamma_20_deg_pack_for_south_grid
   CONFIGURATION:
     SIMULATION_SOFTWARE: corsika_simtel
+    LABEL: test-production-South-pack-for-grid
     MODEL_VERSION: prod6
     SITE: South
     ARRAY_LAYOUT_NAME: test_layout
     PRIMARY: gamma
+    RUN_NUMBER_START: 10
+    NUMBER_OF_RUNS: 1
     AZIMUTH_ANGLE: North
     ZENITH_ANGLE: 20
-    START_RUN: 0
-    RUN: 2
-    NSHOW: 5
+    NSHOW: 10
     ESLOPE: -2.
     VIEWCONE: "0 deg 0 deg"
-    ERANGE: "3 GeV 330 TeV"
+    ERANGE: "100 GeV 1 TeV"
     CORE_SCATTER: "10 1400 m"
     DATA_DIRECTORY: simtools-output
     OUTPUT_PATH: simtools-output
