--- a/pyproject.toml
+++ b/pyproject.toml
@@ -77,7 +77,7 @@ scripts.simtools-db-get-parameter-from-db = "simtools.applications.db_get_parame
 scripts.simtools-db-inspect-databases = "simtools.applications.db_inspect_databases:main"
 scripts.simtools-derive-mirror-rnda = "simtools.applications.derive_mirror_rnda:main"
 scripts.simtools-derive-psf-parameters = "simtools.applications.derive_psf_parameters:main"
-scripts.simtools-generate-array-configuration = "simtools.applications.generate_array_configuration:main"
+scripts.simtools-generate-array-config = "simtools.applications.generate_array_config:main"
 scripts.simtools-generate-corsika-histograms = "simtools.applications.generate_corsika_histograms:main"
 scripts.simtools-generate-default-metadata = "simtools.applications.generate_default_metadata:main"
 scripts.simtools-generate-regular-arrays = "simtools.applications.generate_regular_arrays:main"
