--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,8 +1,7 @@
 sonar.projectKey=gammasim_simtools_AY_ssha9WiFxsX-2oy_w
 sonar.host.url=https://sonar-cta-dpps.zeuthen.desy.de
 sonar.qualitygate.wait=true
-sonar.language=python
 sonar.python.coverage.reportPaths=coverage.xml
 sonar.python.version=3.11
-sonar.exclusions=**/docs/**
+sonar.exclusions=**/docs/**,simtools/applications/*
 sonar.coverage.exclusions=**/tests/**
