--- a/tests/integration_tests/config/derive_psf_parameters_run.yml
+++ b/tests/integration_tests/config/derive_psf_parameters_run.yml
@@ -10,4 +10,4 @@ CTA_SIMPIPE:
     TEST: true
     OUTPUT_PATH: simtools-tests
   INTEGRATION_TESTS:
-    - OUTPUT_FILE: ray-tracing/results/ray-tracing-North-LSTN-01-d10.0km-za20.0deg_derive_psf_parameters.ecsv
+    - OUTPUT_FILE: ray-tracing/results/ray-tracing-North-LSTN-01-d10.0km-za20.0deg_tune_psf.ecsv
