--- a/tests/integration_tests/config/simulate_prod_gamma_20_deg_pack_for_grid_South.yml
+++ b/tests/integration_tests/config/simulate_prod_gamma_20_deg_pack_for_grid_South.yml
@@ -22,6 +22,6 @@ CTA_SIMPIPE:
     PACK_FOR_GRID_REGISTER: true
   INTEGRATION_TESTS:
     - OUTPUT_FILE: |
-        directory_for_grid_upload/run000002_gamma_za020deg_azm000deg_South_test_layout_test-production.log_hist.tar.gz
+        directory_for_grid_upload/run000010_gamma_za20deg_azm000deg_South_test_layout_test-production-South-pack-for-grid.log_hist.tar.gz
     - OUTPUT_FILE: |
-        directory_for_grid_upload/run000002_gamma_za020deg_azm000deg_South_test_layout_test-production.simtel.zst
+        directory_for_grid_upload/run000010_gamma_za20deg_azm000deg_South_test_layout_test-production-South-pack-for-grid.zst
