--- a/pyproject.toml
+++ b/pyproject.toml
@@ -56,6 +56,7 @@ optional-dependencies."doc" = [
 optional-dependencies."tests" = [
   "pytest",
   "pytest-cov",
+  "pytest-mock",
   "pytest-profiling",
   "pytest-random-order",
   "pytest-repeat",
