--- a/environment.yml
+++ b/environment.yml
@@ -32,6 +32,7 @@ dependencies:
   - toml
   - pip:
       - ctao-dpps-cosmic-ray-spectra
+      - particle
       - pytest-random-order
 
 # cheatsheet
