--- a/.github/workflows/CI-integrationtests.yml
+++ b/.github/workflows/CI-integrationtests.yml
@@ -37,7 +37,10 @@ jobs:
       - name: Read .env_template file
         id: read-env
         run: |
-          grep -v '^SIMTOOLS_DB_API_PW\|^SIMTOOLS_DB_API_USER\|^#' .env_template | while read line; do export "$line"; done
+          grep '^[^#].*'(
+            ! grep -E '^SIMTOOLS_DB_API_(USER|PW)|^SIMTOOLS_SIMTEL_PATH' .env_template
+          ) | while read line; do export "$line"; done
+
 
       - name: Set PATH
         run: |
