--- a/.github/workflows/CI-integrationtests.yml
+++ b/.github/workflows/CI-integrationtests.yml
@@ -34,14 +34,6 @@ jobs:
       - name: checkout
         uses: actions/checkout@v4
 
-      - name: Read .env_template file
-        id: read-env
-        run: |
-          grep '^[^#].*'(
-            ! grep -E '^SIMTOOLS_DB_API_(USER|PW)|^SIMTOOLS_SIMTEL_PATH' .env_template
-          ) | while read line; do export "$line"; done
-
-
       - name: Set PATH
         run: |
           echo "PATH=\$PATH:/usr/bin:/usr/local/bin:$SIMTOOLS_SIMTEL_PATH" >> "$GITHUB_ENV"
@@ -52,4 +44,5 @@ jobs:
           source /workdir/env/bin/activate
           pip install '.[tests,dev,doc]'
           export PYTHONPATH=$PYTHONPATH:.
+          grep -v '^#\|^SIMTOOLS_DB_API_PW\|^SIMTOOLS_DB_API_USER\|^SIMTOOLS_SIMTEL_PATH' .env_template | while read line; do export "$line"; done
           pytest --model_version=${{ matrix.type }} --color=yes --durations=20 -n auto --dist loadscope --no-cov tests/integration_tests/
