--- a/.github/workflows/CI-integrationtests.yml
+++ b/.github/workflows/CI-integrationtests.yml
@@ -44,7 +44,7 @@ jobs:
           source /workdir/env/bin/activate
           pip install '.[tests,dev,doc]'
           export PYTHONPATH=$PYTHONPATH:.
-          grep -v '^#\|^SIMTOOLS_DB_API_PW\|^SIMTOOLS_DB_API_USER\|^SIMTOOLS_SIMTEL_PATH' .env_template | while read line; do export "$line"; done
+          source .env_template
           echo "SIMTOOLS_SIMTEL_PATH $SIMTOOLS_SIMTEL_PATH"
           echo "SIMTOOLS_DB_API_PORT $SIMTOOLS_DB_API_PORT"
           echo "SIMTOOLS_DB_SERVER $SIMTOOLS_DB_SERVER"
