--- a/.env_template
+++ b/.env_template
@@ -8,7 +8,7 @@ SIMTOOLS_DB_API_PW=YOUR_PASSWORD # Password for MongoDB: ask the responsible per
 SIMTOOLS_DB_API_AUTHENTICATION_DATABASE='admin' # DB authentication
 SIMTOOLS_DB_SIMULATION_MODEL='Staging-CTA-Simulation-Model-v0-3-0' # simulation DB name
 # SIMTOOLS_DB_SIMULATION_MODEL_URL='' # for testing only
-SIMTOOLS_SIMTEL_PATH='/workdir/sim_telarray' # path to sim_telarray and corsika installation
+SIMTOOLS_SIMTEL_PATH='/workdir/sim_telarray/' # path to sim_telarray and corsika installation
 # The dashboards to monitor the MongoDB instance are in (accessible only from within DESY)
 # https://statspub.zeuthen.desy.de/d/4vXnWwMGz/mongodb?orgId=1&refresh=30s
 # https://statspub.zeuthen.desy.de/d/tBkrQGNmz/mongodb-wiredtiger?orgId=1&refresh=1m
