--- a/.github/workflows/CI-integrationtests.yml
+++ b/.github/workflows/CI-integrationtests.yml
@@ -19,7 +19,50 @@ on:
 
 jobs:
 
+  testbuilding:
+    # Build the package and check if it is installable
+    # (tests among others that all components are there)
+    runs-on: ubuntu-latest
+
+    defaults:
+      run:
+        shell: bash -leo pipefail {0}
+
+    steps:
+
+      - name: checkout
+        uses: actions/checkout@v4
+
+      - name: Build the package
+        run: |
+          python -m pip install --upgrade pip
+          python -m pip install --upgrade build
+          python -m build
+
+  test_commandline_tools:
+    # Test the command line tools defined in pyproject.toml
+    # (tests if they are correctly defined and can be executed)
+    runs-on: ubuntu-latest
+    container:
+      image: ghcr.io/gammasim/simtools-prod:latest
+      options: --user 0
+
+    steps:
+
+      - name: checkout
+        uses: actions/checkout@v4
+
+      - name: Test command line tools
+        run: |
+          # read list of scripts from pyproject.toml and execute them
+          scripts=$(grep 'scripts.simtools-' pyproject.toml | sed -e 's/^scripts\.//' -e 's/ =.*$//')
+          for script in $scripts; do
+            echo "Running $script"
+            $script --help
+          done
+
   integrationtests:
+    # Run integration tests
     runs-on: ubuntu-latest
     container:
       image: ghcr.io/gammasim/simtools-dev:latest
