--- a/tests/integration_tests/config/simulate_prod_gamma_20_deg_South_for_trigger_rates.yml
+++ b/tests/integration_tests/config/simulate_prod_gamma_20_deg_South_for_trigger_rates.yml
@@ -14,8 +14,8 @@ CTA_SIMPIPE:
     ZENITH_ANGLE: 20
     NSHOW: 10
     ESLOPE: -2.
-    VIEWCONE: "0 deg 0 deg"
-    ERANGE: "100 GeV 1 TeV"
+    VIEW_CONE: "0 deg 0 deg"
+    ENERGY_RANGE: "100 GeV 1 TeV"
     CORE_SCATTER: "10 500 m"
     DATA_DIRECTORY: simtools-output
     OUTPUT_PATH: simtools-output
