--- a/pyproject.toml
+++ b/pyproject.toml
@@ -247,6 +247,9 @@ max-public-methods = 50
 ignore-words = ".codespell-ignores"
 
 [tool.pytest.ini_options]
+markers = [
+  "uses_model_database: test uses model parameter database.",
+]
 minversion = "6.0"
 norecursedirs = [
   "build",
