improve health command

--- a/.github/workflows/CI-integrationtests-local-db.yml
+++ b/.github/workflows/CI-integrationtests-local-db.yml
@@ -22,7 +22,6 @@ jobs:
   integrationtests:
     runs-on: ubuntu-latest
 
-    # run a mongodb container as a service
     services:
       mongodb:
         image: mongo:latest
@@ -32,7 +31,7 @@ jobs:
         ports:
           - 27017:27017
         options: >-
-          --health-cmd mongo
+          --health-cmd 'mongo --eval "db.adminCommand('ping')"'
           --health-interval 10s
           --health-timeout 5s
           --health-retries 5
@@ -43,7 +42,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        type: ['2024-02-01', 'prod5']
+        type: ['2024-02-01']
 
     defaults:
       run:
