improve health command

--- a/.github/workflows/CI-integrationtests-local-db.yml
+++ b/.github/workflows/CI-integrationtests-local-db.yml
@@ -31,7 +31,7 @@ jobs:
         ports:
           - 27017:27017
         options: >-
-          --health-cmd 'mongo --eval "db.adminCommand('ping')"'
+          --health-cmd "sh -c 'exec mongo --eval \"db.adminCommand(\\\"ping\\\")\"'"
           --health-interval 10s
           --health-timeout 5s
           --health-retries 5
