--- a/.github/workflows/CI-integrationtests-local-db.yml
+++ b/.github/workflows/CI-integrationtests-local-db.yml
@@ -51,14 +51,29 @@ jobs:
           mongodb-db: CTAO-Simulation-Model-v0-3-0
           mongodb-container-name: simtools-mongodb
 
-      - name: Clone and upload model parameter repository
-        run: |
-          cd database_scripts
-
-      - name: Run integration tests
+      - name: Prepare simtools
         shell: bash -l {0}
         run: |
           source /workdir/env/bin/activate
           pip install '.[tests,dev,doc]'
           export PYTHONPATH=$PYTHONPATH:.
+
+      - name: Clone and upload model parameter repository
+        run: |
+          git clone --depth=1 https://gitlab.cta-observatory.org/cta-science/simulations/simulation-model/model_parameters.git
+          cd model_parameters/model_versions
+          filename=".env"
+          cat << EOF > "$filename"
+          SIMTOOLS_DB_API_PORT=27017
+          SIMTOOLS_DB_SERVER='simtools-mongodb'
+          SIMTOOLS_DB_API_USER='api'
+          SIMTOOLS_DB_API_PW='password'
+          SIMTOOLS_DB_API_AUTHENTICATION_DATABASE='admin'
+          SIMTOOLS_DB_SIMULATION_MODEL='CTAO-Simulation-Model-v0-3-0'
+          EOF
+          simtools-db-add-model-parameters-from-repository-to-db --input_path "./metadata" --db_name "CTAO-Simulation-Model-v0-3-0" --type "metadata"
+
+      - name: Run integration tests
+        shell: bash -l {0}
+        run: |
           pytest --model_version=${{ matrix.type }} --color=yes --durations=20 -n auto --dist loadscope --no-cov tests/integration_tests/
