--- a/tests/integration_tests/config/db_get_array_layouts_from_db_layout_name.yml
+++ b/tests/integration_tests/config/db_get_array_layouts_from_db_layout_name.yml
@@ -3,5 +3,5 @@ CTA_SIMPIPE:
   TEST_NAME: layout_name
   CONFIGURATION:
     SITE: North
-    MODEL_VERSION: "2024-02-01"
+    MODEL_VERSION: "6.0.0"
     ARRAY_LAYOUT_NAME: test_layout
