--- a/tests/integration_tests/config/db_get_array_layouts_from_db_list_arrays.yml
+++ b/tests/integration_tests/config/db_get_array_layouts_from_db_list_arrays.yml
@@ -3,5 +3,5 @@ CTA_SIMPIPE:
   TEST_NAME: list_arrays
   CONFIGURATION:
     SITE: North
-    MODEL_VERSION: "2024-02-01"
+    MODEL_VERSION: "6.0.0"
     LIST_AVAILABLE_LAYOUTS: True
