--- a/tests/integration_tests/config/validate_camera_efficiency_ssts.yml
+++ b/tests/integration_tests/config/validate_camera_efficiency_ssts.yml
@@ -1,6 +1,7 @@
 CTA_SIMPIPE:
   APPLICATION: simtools-validate-camera-efficiency
   TEST_NAME: SSTS
+  MODEL_VERSION_USE_CURRENT: true
   CONFIGURATION:
     SITE: South
     TELESCOPE: SSTS-design
