Add procps to docker images

--- a/docker/Dockerfile-dev
+++ b/docker/Dockerfile-dev
@@ -9,6 +9,7 @@ RUN microdnf update -y && microdnf install -y \
     findutils \
     gcc-c++ \
     git \
+    procps \
     python3.11-pip \
     python3.11-devel \
     wget && \
