Remove prod5, prod6, latest, released

--- a/tests/integration_tests/config/generate_array_config_run.yml
+++ b/tests/integration_tests/config/generate_array_config_run.yml
@@ -4,5 +4,5 @@ CTA_SIMPIPE:
   CONFIGURATION:
     SITE: North
     ARRAY_LAYOUT_NAME: test_layout
-    MODEL_VERSION: prod6
+    MODEL_VERSION: 6.0.0
     OUTPUT_PATH: simtools-output
