--- a/tests/integration_tests/config/plot_array_layout_from_list_south.yml
+++ b/tests/integration_tests/config/plot_array_layout_from_list_south.yml
@@ -3,7 +3,7 @@ CTA_SIMPIPE:
   TEST_NAME: from_list_south
   CONFIGURATION:
     ARRAY_ELEMENT_LIST: ["LSTS", "MSTS", "SSTS"]
-    MODEL_VERSION: prod6
+    MODEL_VERSION: 6.0.0
     OUTPUT_PATH: simtools-tests
     AXES_RANGE: 1200.
   INTEGRATION_TESTS:
