--- a/tests/integration_tests/config/simulate_light_emission_variable.yml
+++ b/tests/integration_tests/config/simulate_light_emission_variable.yml
@@ -7,6 +7,6 @@ CTA_SIMPIPE:
     TELESCOPE: MSTN-04
     ILLUMINATOR: ILLN-01
     LIGHT_SOURCE_SETUP: variable
-    MODEL_VERSION: prod6
+    MODEL_VERSION: 6.0.0
     LIGHT_SOURCE_TYPE: led
     OUTPUT_PATH: simtools-tests
