--- a/tests/integration_tests/config/validate_camera_fov_run.yml
+++ b/tests/integration_tests/config/validate_camera_fov_run.yml
@@ -4,7 +4,7 @@ CTA_SIMPIPE:
   CONFIGURATION:
     SITE: North
     TELESCOPE: MSTN-design
-    MODEL_VERSION: prod6
+    MODEL_VERSION: 6.0.0
     OUTPUT_PATH: simtools-tests
   INTEGRATION_TESTS:
     - OUTPUT_FILE: application-plots/validate_camera_fov_MSTN-design_pixel_layout.pdf
