--- a/tests/integration_tests/config/convert_geo_coordinates_of_array_elements_ground_to_ground.yml
+++ b/tests/integration_tests/config/convert_geo_coordinates_of_array_elements_ground_to_ground.yml
@@ -4,6 +4,6 @@ CTA_SIMPIPE:
   CONFIGURATION:
     INPUT: tests/resources/telescope_positions-North-ground.ecsv
     EXPORT: ground
-    MODEL_VERSION: prod6
+    MODEL_VERSION: 6.0.0
     OUTPUT_PATH: simtools-tests
     SELECT_ASSETS: ['LSTN', 'MSTN']
