--- a/tests/integration_tests/config/convert_geo_coordinates_of_array_elements_print_compact_nocors_utm.yml
+++ b/tests/integration_tests/config/convert_geo_coordinates_of_array_elements_print_compact_nocors_utm.yml
@@ -4,4 +4,4 @@ CTA_SIMPIPE:
   CONFIGURATION:
     INPUT: ./tests/resources/telescope_positions-North-utm.ecsv
     PRINT: utm
-    MODEL_VERSION: prod6
+    MODEL_VERSION: 6.0.0
