--- a/tests/integration_tests/config/convert_geo_coordinates_of_array_elements_print_ground.yml
+++ b/tests/integration_tests/config/convert_geo_coordinates_of_array_elements_print_ground.yml
@@ -4,5 +4,5 @@ CTA_SIMPIPE:
   CONFIGURATION:
     INPUT: tests/resources/telescope_positions-North-ground.ecsv
     PRINT: ground
-    MODEL_VERSION: prod6
+    MODEL_VERSION: 6.0.0
     LOG_LEVEL: DEBUG
