--- a/tests/integration_tests/config/convert_geo_coordinates_of_array_elements_utm_to_ground_meta_in_yml.yml
+++ b/tests/integration_tests/config/convert_geo_coordinates_of_array_elements_utm_to_ground_meta_in_yml.yml
@@ -5,7 +5,7 @@ CTA_SIMPIPE:
     INPUT: tests/resources/telescope_positions-North-utm-without-cta-meta.ecsv
     INPUT_META: tests/resources/telescope_positions-North-utm.meta.yml
     EXPORT: ground
-    MODEL_VERSION: prod6
+    MODEL_VERSION: 6.0.0
     OUTPUT_PATH: simtools-tests
     OUTPUT_FILE: test.ecsv
     SELECT_ASSETS: ['LSTN', 'MSTN']
