--- a/tests/integration_tests/config/db_get_parameter_from_db_site_parameter.yml
+++ b/tests/integration_tests/config/db_get_parameter_from_db_site_parameter.yml
@@ -4,4 +4,4 @@ CTA_SIMPIPE:
   CONFIGURATION:
     SITE: North
     PARAMETER: reference_point_altitude
-    MODEL_VERSION: prod6
+    MODEL_VERSION: 6.0.0
