--- a/tests/integration_tests/config/derive_mirror_rnda_psf_no_tuning.yml
+++ b/tests/integration_tests/config/derive_mirror_rnda_psf_no_tuning.yml
@@ -4,7 +4,7 @@ CTA_SIMPIPE:
   CONFIGURATION:
     SITE: South
     TELESCOPE: MSTS-design
-    MODEL_VERSION: prod6
+    MODEL_VERSION: 6.0.0
     CONTAINMENT_FRACTION: 0.8
     MIRROR_LIST: |
       ./tests/resources/mirror_list_CTA-N-LST1_v2019-03-31_rotated.ecsv
