--- a/tests/integration_tests/config/derive_mirror_rnda_psf_random_flen.yml
+++ b/tests/integration_tests/config/derive_mirror_rnda_psf_random_flen.yml
@@ -4,7 +4,7 @@ CTA_SIMPIPE:
   CONFIGURATION:
     SITE: South
     TELESCOPE: MSTS-design
-    MODEL_VERSION: prod6
+    MODEL_VERSION: 6.0.0
     CONTAINMENT_FRACTION: 0.8
     PSF_MEASUREMENT_CONTAINMENT_MEAN: 1.4
     USE_RANDOM_FLEN: true
