--- a/tests/integration_tests/config/plot_array_layout_one_file.yml
+++ b/tests/integration_tests/config/plot_array_layout_one_file.yml
@@ -3,7 +3,7 @@ CTA_SIMPIPE:
   TEST_NAME: one_file
   CONFIGURATION:
     ARRAY_LAYOUT_FILE: tests/resources/telescope_positions-North-ground.ecsv
-    MODEL_VERSION: prod6
+    MODEL_VERSION: 6.0.0
     OUTPUT_PATH: simtools-tests
   INTEGRATION_TESTS:
     - OUTPUT_FILE: application-plots/array_layout_telescope_positions-North-ground_North_ground_0deg.pdf
