--- a/tests/integration_tests/config/plot_array_layout_one_file_with_name_with_extension.yml
+++ b/tests/integration_tests/config/plot_array_layout_one_file_with_name_with_extension.yml
@@ -3,7 +3,7 @@ CTA_SIMPIPE:
   TEST_NAME: one_file_with_name_with_extension
   CONFIGURATION:
     ARRAY_LAYOUT_FILE: tests/resources/telescope_positions-North-ground.ecsv
-    MODEL_VERSION: prod6
+    MODEL_VERSION: 6.0.0
     FIGURE_NAME: test.png
     OUTPUT_PATH: simtools-tests
   INTEGRATION_TESTS:
