--- a/tests/integration_tests/config/simulate_prod_gamma_20_deg_South_pack_for_grid.yml
+++ b/tests/integration_tests/config/simulate_prod_gamma_20_deg_South_pack_for_grid.yml
@@ -4,7 +4,7 @@ CTA_SIMPIPE:
   CONFIGURATION:
     SIMULATION_SOFTWARE: corsika_simtel
     LABEL: test-production-South-pack-for-grid
-    MODEL_VERSION: prod6
+    MODEL_VERSION: 6.0.0
     SITE: South
     ARRAY_LAYOUT_NAME: test_layout
     PRIMARY: gamma
