--- a/tests/integration_tests/config/validate_optics_run.yml
+++ b/tests/integration_tests/config/validate_optics_run.yml
@@ -4,7 +4,7 @@ CTA_SIMPIPE:
   CONFIGURATION:
     SITE: North
     TELESCOPE: LSTN-01
-    MODEL_VERSION: prod6
+    MODEL_VERSION: 6.0.0
     MAX_OFFSET: 1.0
     SRC_DISTANCE: 11.
     ZENITH: 20
